# hallouminate

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  build.just  deny.toml  dist-workspace.toml  justfile  rust-toolchain.toml
.agents/plugins/: marketplace.json
.agents/skills/wiki-ingest/: SKILL.md
.agents/skills/wiki-init/: SKILL.md
.agents/skills/wiki-query/: SKILL.md
.cheese/cook/: issue-139-rerank-timeout.md
.cheese/notes/: issue-139-rerank-timeout.md  wikilinks-backlinks-136.md
.cheese/research/ground-retrieval-eval/: findings.md
.cheese/specs/: wiki-ingest-dedup-log-index.md
.claude-plugin/: marketplace.json
.claude/workflows/: node-runner.js
.cursor-plugin/: marketplace.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: actions-pin-check.yml  ci.yml  dependency-review.yml  docs.yml  nightly-release-check.yml  nightly.yml  plugins-smoketest.yml  publish-crates.yml  publish-npm.yml  release-skills.yml  release.yml  scorecard.yml
.hallouminate/: config.toml
.hallouminate/wiki/: architecture.md  blocking-inference-offload.md  claim-provenance-marks.md  config-layering.md  corpus-walker.md  daemon-and-cli.md  debt-observed-test-isolation.md  design-rationale.md  index.md  log.md  mcp-surface.md  multi-format-ingestion.md  office-prose-extraction.md  ort-arena-retention.md  pdf-ocr-ingestion.md  racy-mtime-smudge.md  release-ceremony.md  wiki-conventions.md  worktree-corpus-identity.md  worktree-dev-gotchas.md
crates/hallouminate/: Cargo.toml
crates/hallouminate-adapters/: Cargo.toml
crates/hallouminate-adapters/src/: crossencoder.rs  embedder.rs  lance.rs  lib.rs
crates/hallouminate-config/: Cargo.toml
crates/hallouminate-config/src/: lib.rs
crates/hallouminate-daemon/: Cargo.toml
crates/hallouminate-daemon/src/: backpressure.rs  bootstrap.rs  client.rs  debt.rs  dispatch.rs  heartbeat.rs  ipc.rs  lib.rs  maintenance.rs  report.rs  server.rs  state.rs  status.rs  watch.rs  watchdog.rs
crates/hallouminate-domain/: Cargo.toml
crates/hallouminate-domain/src/: corpus.rs  discovery.rs  footnotes.rs  ground.rs  indexer.rs  repository.rs  search.rs
crates/hallouminate-domain/src/corpus/: chunker.rs  claim_marks.rs  hasher.rs  index_md.rs  sandbox.rs  section.rs  validate.rs  walker.rs
crates/hallouminate-domain/src/embeddings/: index.rs
crates/hallouminate-domain/src/ground/: bucket.rs  format.rs  orchestrate.rs  types.rs
crates/hallouminate-domain/src/indexer/: apply.rs  chunk.rs  format.rs  index.rs  plan.rs  store.rs  writer.rs
crates/hallouminate-domain/src/search/: crossencoder.rs  ripgrep.rs
crates/hallouminate/src/: cli.rs  config.rs  lib.rs  logging.rs  main.rs  mcp.rs  xdg.rs
crates/hallouminate/src/cli/: config-default.toml  config.rs  ground.rs  hook.rs  index.rs  init_repo.rs
crates/hallouminate/src/daemon/: backoff.rs  backpressure.rs  bootstrap.rs  churn.rs  client.rs  debt.rs  dispatch.rs  heartbeat.rs  ipc.rs  ladder.rs  lifecycle.rs  maintenance.rs  mod.rs  pressure.rs  server.rs  socket.rs  state.rs  status.rs  supervisor.rs  watch.rs  watchdog.rs
crates/hallouminate/src/mcp/: tools.rs
crates/hallouminate/tests/it/: cli_ground.rs  cli_index.rs  cross_repo_union.rs  daemon.rs  fixture_e2e.rs  lancedb_integration.rs  main.rs  mcp_serve.rs  model_mismatch.rs  multi_format.rs  plugin_manifests.rs  real_tokenizer.rs  recovery.rs  verification_gate.rs
crates/hallouminate/tests/it/common/: daemon.rs  mod.rs
docs/: book.toml
docs/adr/: daemon-idle-exit-001.md  daemon-idle-exit-002.md  daemon-idle-exit-003.md  daemon-rework-001.md  daemon-rework-002.md  daemon-rework-003.md  daemon-rework-004.md  daemon-rework-005.md  daemon-rework-006.md  fm-index-search-signal-001.md  lancedb-expr-deferral-001.md  pressure-aware-maintenance-001.md  pressure-aware-maintenance-002.md  pressure-aware-maintenance-003.md
docs/assets/: demo-setup.sh  demo.tape  social-preview.html
docs/src/: SUMMARY.md  architecture.md  cli.md  config.md  development-verification.md  dogfooding.md  install.md  intro.md  mcp.md  releasing.md
docs/theme/: custom.css
eval/: README.md  queries.json
eval/fixtures/wiki/: code-aware-chunking.md  corpus-walker.md  index.md  wiki-conventions.md
npm/: README.md  install.js  package.json  run.js
npm-nightly/: install.js  package.json  run.js
plugins/hallouminate/: .mcp.json  README.md  gemini-extension.json  plugin.json
plugins/hallouminate/.claude-plugin/: plugin.json
plugins/hallouminate/.codex-plugin/: plugin.json
plugins/hallouminate/.cursor-plugin/: plugin.json
plugins/hallouminate/.opencode-plugin/: plugin.json
plugins/hallouminate/templates/: wiki-entry.md
ralphs/hallouminate-impl/: TASKS.md
scripts/: verify.py
src/: adapters.rs  app.rs  domain.rs  lib.rs  main.rs
src/adapters/: crossencoder.rs  embedder.rs  lance.rs  mcp.rs  sqlite.rs
src/adapters/fs/: mod.rs
src/adapters/mcp/: server.rs  tools.rs
src/adapters/sqlite/: mod.rs  pool.rs  queries.rs  schema.rs
src/app/: cli.rs  config.rs  input_error.rs  logging.rs
src/app/cli/: config-default.toml  config.rs  ground.rs  hook.rs  index.rs  init_repo.rs  mod.rs
src/app/config/: mod.rs
src/app/daemon/: ipc.rs  (+14 more)
src/domain/: common.rs  corpus.rs  discovery.rs  embeddings.rs  footnotes.rs  ground.rs  indexer.rs  repository.rs  search.rs
src/domains/: mod.rs
tests/: cascade_delete.rs  cli_ground.rs  cli_index.rs  cross_repo_union.rs  daemon.rs  eval_ground_recall.rs  fixture_e2e.rs  fusion_switch.rs  ground_fixture.rs  idempotency.rs  lancedb_integration.rs  mcp_serve.rs  model_mismatch.rs  multi_format.rs  plugin_manifests.rs  real_tokenizer.rs  recovery.rs
tests/common/: daemon.rs  mod.rs
tests/fixtures/: large.md
tests/it/: cli_ground.rs  cli_index.rs  cross_repo_union.rs  daemon.rs  fixture_e2e.rs  lancedb_integration.rs  main.rs  mcp_serve.rs  model_mismatch.rs  multi_format.rs  real_tokenizer.rs  recovery.rs
(+76 files in other folders)
