[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.3.2"
edition = "2024"
rust-version = "1.91"
license = "MIT"
repository = "https://github.com/paulnsorensen/hallouminate"
authors = ["Paul Sorensen <paulnsorensen@gmail.com>"]
description = "A markdown corpus indexer for LLMs to build and query their own per-repo wikis."

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "net", "sync", "io-util", "signal", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
async-trait = "0.1"
rustix = { version = "1", features = ["fs", "process"] }
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
shellexpand = "3"
schemars = "1"
toml = "1.1"
# Page-level frontmatter parsing via serde_yaml_ng, the maintained fork of the
# archived serde_yaml. lindera 3.x already pulls serde_yaml_ng into the build
# graph, so this direct dep adds zero new compilation and keeps a single YAML
# crate in the tree.
serde_yaml_ng = "0.10"

hallouminate-domain = { path = "crates/hallouminate-domain", version = "0.3.2" }
hallouminate-adapters = { path = "crates/hallouminate-adapters", version = "0.3.2" }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"