[package]
name = "hallouminate-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Adapters layer for hallouminate."

[dependencies]
hallouminate-domain.workspace = true
lancedb = "0.31"
# Only the `arrow` umbrella: its `arrow::array` / `arrow::datatypes` re-exports
# replace direct arrow-array/arrow-schema deps, so they can never drift apart.
arrow = "58"
async-trait.workspace = true
futures = "0.3"
fastembed = "5"
blake3.workspace = true
rustix.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tokio.workspace = true
# Force vendored (compile-from-source) OpenSSL so `openssl-sys` cross-compiles for
# aarch64-unknown-linux-gnu in the dist release build. openssl-sys is pulled in
# transitively via native-tls (ort-sys/ureq, fastembed/hf-hub, lancedb/reqwest);
# vendoring avoids needing the target's system libssl under cargo-zigbuild cross-compile.
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3"
