[package]
name = "hallouminate-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Config layer for hallouminate."

[dependencies]
serde.workspace = true
hallouminate-domain.workspace = true
toml.workspace = true
shellexpand.workspace = true

[dev-dependencies]
tempfile = "3"